# NeuroSymbolicDG

./: .gitignore  README.md  pyproject.toml  test_ckpt.py
data/: cubdg.sh  get_all_data.sh  officehome.sh  pacs.sh  vlcs.sh
neurosymbolic_da/data/: cub_concepts.py  cubdg.py  digits.py  domainnet.py  loader_utils.py  office.py  pacs.py  scb.py  terrainc.py  vlcs.py
neurosymbolic_da/dsl/: grammar.py  ops.py  primitives.py  relations.py
neurosymbolic_da/nn/: backbone.py  bottleneck.py  clip_backbone.py  clip_concept_bottleneck.py  hourglass_bottleneck.py  pipeline.py  pipeline_clip_pcfg.py  pipeline_nobottleneck.py  pipeline_nopcfg.py  pipeline_virda_pcfg.py  slot_bottleneck.py
scripts/: adapt_cdan.py  adapt_cdan_dg.py  adapt_cdan_mixup.py  adapt_cdan_nopcfg.py  adapt_fixbi.py  adapt_nopcfg.py  adapt_nrc.py  adapt_shot.py  adapt_shot_cdan.py  adapt_target.py  adapt_virda.py  download_digits.py  download_office31.sh  download_officehome.sh  download_pacs.sh  eval_test_time.py  extract_derivations.py  multi_adapt.py  train_clip_pcfg.py  train_dg.py  train_dg_nopcfg.py  train_hybrid.py  train_nobottleneck.py  train_nopcfg.py  train_source.py  train_virda_pcfg.py
tests/: test_adapt.py  test_backbone.py  test_bottleneck.py  test_data.py  test_eval_handler.py  test_extract_derivations.py  test_grammar.py  test_inside_handler.py  test_invariance.py  test_loader_utils.py  test_losses.py  test_ops.py  test_pipeline.py  test_pipeline_nobottleneck.py  test_pipeline_nopcfg.py  test_pipeline_virda_pcfg.py  test_pmcmc.py  test_relations.py  test_scb.py  test_trainer.py
(+11 files in other folders)
