[project]
name = "neurosymbolic-da"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["effectful>=0.3.1", "torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
